add speaker files and images

--- a/_data/speakers/david-hussman.yml
+++ b/_data/speakers/david-hussman.yml
@@ -3,4 +3,5 @@ image: david-hussman.jpg
 twitter: davidhussman 
 title: 
 abstract: 
-bio: 
+bio: | 
+    David teaches and coaches product discovery through iterative delivery. He has spent the last 10 years coaching agility, Lean practices and producing products for companies of all sizes around the world. For each engagement, David’s coaching is non-dogmatic, well-grounded, challenging and pragmatic. By focusing on really getting to know a project community, David seeds self-discovery and avoids falling into the expert trap of simply telling people what they “should do". David spends most of his time pairing around code and tests, creating product ideas and roadmaps, and helping leadership teams pragmatically introduce the type of agility that fosters innovation and creates a competitive edge. David owns and guides <a href="http://www.devjam.com">DevJam</a> (www.devjam.com), a composition of mentors who blend technology, people, and processes to create better products in competitive cycles.</p>
