--- a/_data/speakers/tim-andersen.yml
+++ b/_data/speakers/tim-andersen.yml
@@ -3,4 +3,10 @@ image: tim-andersen.jpeg
 twitter: timander
 title: 
 abstract: 
-bio: 
+bio: |
+    Tim has worked in software development in several industries including financial, fundraising, insurance, and telecommunications. He has played several roles including Agile Coach, Tech Lead, Software Developer, Database Administrator, and Business Analyst. His real passion is to work with people to understand their context and help them introduce incremental improvements to get better at software development. Tim is currently an Embedded XP Coach for Lean TECHniques, Inc. and is consulting with Principal Financial Group.
+    <br/><br/>
+    Prior to his work with Lean TECHniques, Tim was a Software Developer and Tech Lead at Iowa Student Loan immersed in a culture of Extreme Programming where he learned many valuable skills including Test-Driven Development, Pair Programming, Refactoring, and Continuous Integration. While at Iowa Student Loan, Tim was interviewed by Gojko Adzic and his story is featured as a case-study in the book Specification by Example.
+    <br/><br/>
+    Conferences Tim has presented at include the Agile 2009 conference (Chicago), Code Freeze 2010 (Twin Cities), and Agile Day Twin Cities 2011. He has also presented at the Central Iowa Java User Group and has been the leader of the Agile Iowa user group (2007-2012).
+        
