add timander's title and abstract

--- a/_data/speakers/tim-andersen.yml
+++ b/_data/speakers/tim-andersen.yml
@@ -1,8 +1,9 @@
 name: Tim Andersen
 image: tim-andersen.jpeg
 twitter: timander
-title: 
-abstract: 
+title: Agile Data Practices
+abstract: | 
+    As software development teams ramp up on agile practices, dealing with the database is often ignored. Software developers tend to accept the fact that databases must be shared, are hard to change, and they must wait on someone else to make those changes. It doesn't have to be this way! This session will identify the pain points and anti-patterns associated with traditional database management and cover specific techniques and tools to improve the workflow for embracing database changes.
 bio: |
     Tim has worked in software development in several industries including financial, fundraising, insurance, and telecommunications. He has played several roles including Agile Coach, Tech Lead, Software Developer, Database Administrator, and Business Analyst. His real passion is to work with people to understand their context and help them introduce incremental improvements to get better at software development. Tim is currently an Embedded XP Coach for Lean TECHniques, Inc. and is consulting with Principal Financial Group.
     <br/><br/>
