updated speakers. add speaker link

--- a/_data/speakers/sue-mckinney.yml
+++ b/_data/speakers/sue-mckinney.yml
@@ -1,7 +1,19 @@
 name: Sue McKinney 
-image: unknown.jpg
-title: 
-abstract: 
+image: sue-mckinney.png
+title: "Agile in the Large: Simplicity to Address Complexity"
+abstract: |
+    Why do some agile transformations succeed and some fail? Most often it is the culture that refuses to change or changes comes too slowly. Sue McKinney led the agile transformation of 1500 engineers world-wide at Symantec with notable results in just 3 months! Her ‘pilot’ project required 22 scrum teams. Sue will talk about her experiences with the turn around and how she utilized the basic tenets of Agile and Lean for adoption and how she addressed the culture change also required for successful adoption at scale.
 twitter: 
 linkedin:
-bio: 
+bio: |
+    Sue McKinney is a results-oriented technology executive with a track record of aligning products to market needs and leading engineering and product teams to much higher performance levels. She transforms practices, skills, and results to generate significant improvements in growth, value, effectiveness, and efficiency.
+    <br/><br/>
+    Currently, Sue leads a 1000+ World Wide Engineering team at Symantec in the Information Management Business.
+    <br/><br/>
+    Sue joined Pitney Bowes in April 2010 as the Vice President, Worldwide Engineering. Tasked with creating market-leading software products and services, she quickly transformed the entire software engineering value chain.
+    <br/><br/>
+    Pulling together the legacy products business with a diverse and disparate set of acquisitions, Sue created an engineering team that focused on improving the time to market and gave PB more scale in technical expertise and experience. She concentrated her efforts on application architecture, component reuse, production support and agile/lean best practices and methodologies. She increased collaboration with product management and the marketplace which has sparked innovation, a key to success in delivering PB growth goals.
+    <br/><br/>
+    Prior to joining Pitney Bowes, Ms. McKinney was Vice President of Development Transformation at IBM where she led the effort to affect development transformation across the IBM Software Group development teams, influencing over 25,000 engineers and 43,000 employees in 120 global locations. Key focus areas included the definition of enterprise architecture, governance and fostering agile development methodologies and improving overall software engineering effectiveness. She also held various development executive positions with IBM Lotus where she was responsible for the development of the Sametime Instant Messaging, serving 20 million users, WebSphere Portal and Lotus Domino, IBM’s flagship email messaging system.
+    <br/><br/>
+    Ms. McKinney is a graduate of Ohio State University, with a B.S. in Business Administration and Computer Science.
