--- a/_data/speakers/tim-gifford.yml
+++ b/_data/speakers/tim-gifford.yml
@@ -2,8 +2,16 @@ name: Tim Gifford
 image: tim-gifford.jpg
 twitter: timgifford
 linkedin: timgifford
-title: 
-abstract: 
+title: Are your developers lying to you?
+abstract: |
+    Are your developers commit-a-phobs or do they consistently over-commit? Have they been “almost done” for weeks? Learn what causes these behaviors and what you can do to counter them. We will discuss how to make the technical output of the team visible and what non-technical leaders can do to validate and support professional behaviors.
+    <br/><br/>
+    Learning Outcomes:
+    <br/><br/>
+    Review the causes for developer behaviors
+    Discover the signals of developers who cut corners developers
+    Identify code quality problems as a non-technical leader
+    Techniques you can use to foster trust on a team
 bio: | 
    Tim Gifford is a software craftsman in West Des Moines, Ia. where he provides training, mentoring, software development and Agile consulting to Central Iowa businesses.
     <br/><br/>
