--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -34,7 +34,7 @@
         title: Leaders, Do You Want to Avoid Extinction?
 
       - id: agile-ba 
-        name: Diana Zajac-Woodie
+        name: Diane Zajac-Woodie
         title: How Agile Helped a Business Analyst Discover Her Real Value
 
 - time: 12:00 - 1:00            
