add jon harcey info

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -50,7 +50,7 @@
         title: Positive Politics
       - id: story-map
         name: Jon Harcey
-        title: Story Mapping
+        title: The Power of Story Mapping
 
 - time: 2:00 - 2:15
   break: Break
