Add Travis.ci support

--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ github_username:  agileiowa
 markdown: kramdown
 permalink: pretty
 
-exclude: [node_modules, bower_components]
+exclude: [node_modules, bower_components, vendor]
