replace scott sehlhorst with kevin seidl

--- a/_data/2016/09/schedule.yml
+++ b/_data/2016/09/schedule.yml
@@ -20,7 +20,7 @@
   sessions:
       - id: julie-chickering
       - id: llewelyn-falco
-      - id: scott-sehlhorst
+      - id: kevin-seidl 
       - id: brandon-carlson
 
 - time: 12:00 - 1:00            
