--- a/_data/2017/10/schedule.yml
+++ b/_data/2017/10/schedule.yml
@@ -1,8 +1,8 @@
 - time: 8:00 - 9:00
-  break: Check-in and Registration - Ballroom B 
+  break: Check-in and Breakfast (Provided)
 
 - time: 9:00 - 9:30  
-  break: Opening - Announcements, Speaker Introductions - Ballroom B
+  break: Opening - Announcements, Speaker Introductions
 
 - time: 9:30 - 9:45
   break: Break
@@ -24,7 +24,7 @@
       - id: TBD
 
 - time: 12:00 - 1:00            
-  break: Lunch (Provided) - Ballroom B
+  break: Lunch (Provided)
 
 - time: 1:00 - 2:00
   sessions:
@@ -45,6 +45,4 @@
 
 - time: 3:15 - 5:00
   break: |
-      Open Space - Ballroom B 
-      <br/>
-      Networking, Drinks and Tapas - BallRoom B
+      Networking, Drinks and Tapas
