--- a/_data/2017/10/schedule.yml
+++ b/_data/2017/10/schedule.yml
@@ -2,46 +2,46 @@
   break: Check-in and Breakfast (Provided)
 
 - time: 9:00 - 9:30  
-  break: Opening - Announcements, Speaker Introductions
+  break: Opening - Announcements, Speaker Introductions - Ballroom B
 
 - time: 9:30 - 9:45
   break: Break
             
 - time: 9:45 - 10:45
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: nate-adams
+      - id: diane-zajac-woodie
+      - id: brandon-carlson
+      - id: dave-saboe
 - time: 10:45 - 11:00
   break: Break
 
 - time: 11:00 - 12:00
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: tadd-hatch
+      - id: matt-barcomb
+      - id: akrem-saed
+      - id: dustin-thostenson
 
 - time: 12:00 - 1:00            
-  break: Lunch (Provided)
+  break: Lunch - Ballroom B (Provided)
 
 - time: 1:00 - 2:00
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: doc-norton
+      - id: jeff-patton
+      - id: ryan-bergman
+      - id: tricia-broderick
 
 - time: 2:00 - 2:15
   break: Break
        
 - time: 2:15 - 3:15
   sessions:
+      - id: kevin-reiter
+      - id: chad-holdorf
       - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: kupe
 
 - time: 3:15 - 5:00
   break: |
