--- a/_data/2017/10/schedule.yml
+++ b/_data/2017/10/schedule.yml
@@ -40,7 +40,7 @@
   sessions:
       - id: kevin-reiter
       - id: chad-holdorf
-      - id: TBD
+      - id: luke-amdor
       - id: kupe
 
 - time: 3:15 - 5:00
