--- a/_data/2017/10/schedule.yml
+++ b/_data/2017/10/schedule.yml
@@ -10,7 +10,7 @@
 - time: 9:45 - 10:45
   sessions:
       - id: nate-adams
-      - id: diane-zajac-woodie
+      - id: diane-zajac
       - id: brandon-carlson
       - id: dave-saboe
 - time: 10:45 - 11:00
