--- a/_data/2018/09/schedule.yml
+++ b/_data/2018/09/schedule.yml
@@ -12,30 +12,30 @@
 
 - time: 11:00 - 12:00
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: barry-forrest
+      - id: gianfranco-berardi
+      - id: jeff-byron
+      - id: kent-mcdonald
 
 - time: 12:00 - 1:00            
   break: Lunch - Ballroom (Provided)
 
 - time: 1:00 - 2:00
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: tim-ottinger
+      - id: josh-carson
+      - id: mindy-bohannon
+      - id: skylar-watson
 
 - time: 2:00 - 2:15
   break: Break
        
 - time: 2:15 - 3:15
   sessions:
-      - id: TBD
-      - id: TBD
-      - id: TBD
-      - id: TBD
+      - id: allison-pollard
+      - id: andy-singleton
+      - id: nate-adams
+      - id: andy-van-fleet
 
 - time: 3:15 - 5:00
   break: |
