--- a/_data/y2019/october/schedule.yml
+++ b/_data/y2019/october/schedule.yml
@@ -5,7 +5,7 @@
   break: Opening - Announcements, Speaker Introductions - Ballroom
 
 - time: 9:45 - 10:45
-  keynote: agile-mindset
+  keynote: linda-rising-agile-mindset
   room: Ballroom
             
 - time: 10:45 - 11:00
