--- a/_data/y2019/october/schedule.yml
+++ b/_data/y2019/october/schedule.yml
@@ -36,7 +36,7 @@
       - id: julie-urban-kiss-framework
       - id: brandon-carlson-tbd
       - id: maggie-iglesias-pena-ux-agile
-      - id: 
+      - id: greg-jensen-csuite
 
 - time: 3:15 - 5:00
   break: |
